<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <SwitchPreference
        android:key="pixiv_change_wifi"
        android:title="@string/pref_change_wifi"
        android:defaultValue="true"/>

    <SwitchPreference
        android:key="pixiv_change_big"
        android:title="@string/pref_change_big_title"
        android:defaultValue="false"/>
    <EditTextPreference
        android:defaultValue="@string/pref_default_change_frequency"
        android:inputType="number"
        android:key="pixiv_change_frequency"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_change_frequency_title" />

</PreferenceScreen>
